2005-10-06  Martin Maechler  <maechler@stat.math.ethz.ch>

	* DESCRIPTION (Version): 1.3-9
	* R/vlmc.R: dito
	* R/sim.R (simulate.vlmc): update to new (R 2.2.0) generic simulate().

2005-03-25  Martin Maechler  <maechler@stat.math.ethz.ch>

	* DESCRIPTION (Version): 1.3-8
	* R/vlmc.R: dito

	* NAMESPACE: new

	* R/zzz.R (.onLoad): instead of .First.lib

	* man/bnrf1.Rd: drop 'require("ts")'

2004-07-07  Martin Maechler  <maechler@stat.math.ethz.ch>

	* man/vlmc.Rd: updated reference: JCGS publication

2004-05-05  Martin Maechler  <maechler@stat.math.ethz.ch>

	* DESCRIPTION (Version, Date): 1.3-7

	* R/rcplot.R (RCplot): new boxplot() NA behavior -> need to drop
		NAs myself.

2003-12-17  Martin Maechler  <maechler@stat.math.ethz.ch>

	* DESCRIPTION (Version, Date): 1.3-6 - released

	* R/zzz.R (.First.lib): mva or stats depending on R version
	* R/entropy.R (AIC): AIC.vlmc for R ver < 1.4

2003-11-07  Martin Maechler  <maechler@stat.math.ethz.ch>

	* DESCRIPTION (Version, Date): 1.3-5 - release to CRAN

	* man/alphabet.Rd: finally added
	* man/int2char.Rd: link to and from
	* man/alpha2int.Rd: <ditto>

2003-10-27  Martin Maechler  <maechler@stat.math.ethz.ch>

	* TODO: some update; need to prioritize this!

	* man/as.dendrogram.vlmc.Rd: example had typo; now also extended

2003-09-16  Martin Maechler  <maechler@stat.math.ethz.ch>

	* DESCRIPTION (Note): instead of `Versionnote'

2003-09-10  Martin Maechler  <maechler@stat.math.ethz.ch>

	* R/dendrogram.R (as.dendrogram.vlmc): much better; still to go
	* man/as.dendrogram.vlmc.Rd (as.dendrogram.vlmc): first plot

2003-09-08  Martin Maechler  <maechler@stat.math.ethz.ch>

	* R/alphabet.R: new alphabet() generic and method.
	  	a first step towards extending alphabet size to more than 26

2003-08-30  Martin Maechler  <maechler@stat.math.ethz.ch>

	* man/simulate.vlmc.Rd: typo; see also.
	* man/predict.vlmc.Rd: see also to simulate.

2003-08-29  Martin Maechler  <maechler@stat.math.ethz.ch>
