@@ -1,19 +1,0 @@
-library(VLMC)
-example(as.dendrogram.vlmc)
-par(ask=TRUE)
-example(as.dendrogram.vlmc)
-options(verbose=TRUE)
-options(verbose=TRUE)
-plot(dv.dpr, type = "tr", nodePar = list(pch = c(1,16), cex = 1.5))
-par(ask=FALSE)
-as.character(NULL)
-debug(stats:::plotNode)
-plot(dv.dpr, type = "tr", nodePar = list(pch = c(1,16), cex = 1.5))
-attr(subtree, "label")
-Q
-options(list('digits', 'scipen'))
-options(c('digits', 'scipen'))
-options('digits', 'scipen')
-options
-options(c('digits', 'scipen'))
-options(list('digits', 'scipen'))
