@@ -1,20 +1,22 @@
 
-R : Copyright 2003, The R Development Core Team
-Version 1.8.0 Under development (unstable) (2003-07-09)
+R version 2.4.0 alpha (2006-09-17 r39373)
+Copyright (C) 2006 The R Foundation for Statistical Computing
+ISBN 3-900051-07-0
 
 R is free software and comes with ABSOLUTELY NO WARRANTY.
 You are welcome to redistribute it under certain conditions.
-Type `license()' or `licence()' for distribution details.
+Type 'license()' or 'licence()' for distribution details.
 
 R is a collaborative project with many contributors.
-Type `contributors()' for more information.
+Type 'contributors()' for more information and
+'citation()' on how to cite R or R packages in publications.
 
-Type `demo()' for some demos, `help()' for on-line help, or
-`help.start()' for a HTML browser interface to help.
-Type `q()' to quit R.
+Type 'demo()' for some demos, 'help()' for on-line help, or
+'help.start()' for an HTML browser interface to help.
+Type 'q()' to quit R.
 
 > library(VLMC)
-Loading required package: MASS 
+Loading required package: MASS
 > 
 > set.seed(21001)
 > c0 <- proc.time()
@@ -520,7 +522,7 @@ AIC =  56
 > p.dt2c0dt3 <- predict(vlmc.dt2c0, dt3) ## quite many NA (but not at end!)
 > ## which(is.na(p.dt2c0dt3[,1]))
 > which(is.na(unname(p.dt2c0dt3[-1,1])))
-numeric(0)
+integer(0)
 > ##  1  3  6 10 15 ---- SAME as ../VLMC/dt2_c0.dt3.pred !!
 > ## NONE!
 > 
@@ -589,5 +591,5 @@ numeric(0)
 1 0    1                 0                 1    3    1       
 > 
 > cat("Time elapsed:", format(proc.time() - c0),"\n")
-Time elapsed: 0.09 0.01 0.11 0.00 0.00 
+Time elapsed: 0.098 0.006 0.104 0.000 0.000 
 > 
